--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -33,6 +33,7 @@
 					</td>
 					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
+					<td><%= link_to "コメント", book_path(book.id) %></td>
 				</tr>
 				<% end %>
 			</tbody>
