--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -29,8 +29,48 @@
 					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
 					<% end %>
 				</tr>
-			</table>
-
+		</table>
+		        <ol>
+				    <% @book_comments.each do |book_comment| %>
+				        <li class="comment">
+				            <div class="comment-body bb">
+				                <div class="comment-text">
+				                    <div class="comment-author clearfix">
+				                        <a href="#" class="link-author"><%= book_comment.user.name %></a>
+				                        <span class="comment-meta">
+				                        <span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
+				                        </span>
+				                    <div class="comment-entry"><%= book_comment.comment %></div>
+				                    <div><%= link_to "Destroy",book_book_comments_path(book_comment.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></div>
+				                    <% if @book.favorited_by?(current_user) %>
+										<li>
+										    <%= link_to book_favorites_path(@book), method: :delete do %>
+										    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+										    <%= @book.favorites.count %> いいね
+										    <% end %>
+										</li>
+										<% else %>
+										<li>
+										    <%= link_to book_favorites_path(@book), method: :post do %>
+										    <i class="fa fa-heart-o" aria-hidden="true"></i>
+										    <%= @book.favorites.count %> いいね
+										    <% end %>
+										</li>
+										<% end %>
+				                </div>
+				            </div>
+				           </div>
+				        </li>
+				    <% end %>
+				</ol>
+				<%= form_for [@book, @book_comment] do |f| %>
+				    <div class="row">
+				        <div class="col-sm-12">
+				            <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+				        </div>
+				    </div>
+				    <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+				<% end %>
 	</div>
 </div>
 
